--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@use-gesture/react": "^10.2.12",
     "axios": "^0.27.2",
     "classnames": "^2.3.1",
     "react": "^17.0.2",
