--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@use-gesture/react": "^10.2.12",
+    "@godartm/react-responsive-pinch-zoom-pan": "^1.0.0",
     "axios": "^0.27.2",
     "classnames": "^2.3.1",
     "react": "^17.0.2",
@@ -16,6 +16,7 @@
     "react-transition-group": "^4.4.2"
   },
   "devDependencies": {
+    "@originjs/vite-plugin-commonjs": "^1.0.3",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.2",
     "@typescript-eslint/parser": "^5.21.0",
